src/test/ui/parser/unclosed_delim_mod.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - closing delimiter possibly meant for this
LL |     Ok(Value {
   |       - unclosed delimiter
LL |     }
LL | }
   | ^ mismatched closing delimiter

error: aborting due to previous error

